fix(input-spacing): remove letter spacing from inputs (#37)

--- a/src/components/_input.scss
+++ b/src/components/_input.scss
@@ -13,7 +13,6 @@
   font-family: $sb-base-font-family;
   font-weight: 400;
   font-size: sb-px2rems(13px);
-  letter-spacing: 0.5px;
   color: $sb-color-dark-3;
 
   &:hover {
